force-app/main/default/objects/SKU_Price__c/SKU_Price__c.object-meta.xml
<CustomObject>
    <description>Junction Object between Products and Pricing Data</description>
    <label>SKU Price</label>
    <nameField>
        <displayFormat>SKU-{000000}</displayFormat>
        <label>SKU Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SKU Prices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>