force-app/main/default/objects/SKU_Price__c/fields/Add_Color_10__c.field-meta.xml
<CustomField>
    <fullName>Add_Color_10__c</fullName>
    <formula>Pricing_Data__r.Color_10__c / (1- Pricing_Data__r.Contract_Pricing_Merch__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$ Add. Color#10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>