force-app/main/default/objects/SKU_Price__c/fields/Add_Color_1__c.field-meta.xml
<CustomField>
    <fullName>Add_Color_1__c</fullName>
    <formula>Pricing_Data__r.Color_1__c / (1- Pricing_Data__r.Contract_Pricing_Merch__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$ Add. Color#1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>