force-app/main/default/objects/SKU_Price__c/fields/Front_Color_2__c.field-meta.xml
<CustomField>
    <fullName>Front_Color_2__c</fullName>
    <formula>(Product__r.AcctSeed__Unit_Cost__c + Pricing_Data__r.Color_2__c )/(1- Pricing_Data__r.GP_Church__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$ Front Color#2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>