force-app/main/default/objects/SKU_Price__c/fields/Max_Pieces__c.field-meta.xml
<CustomField>
    <fullName>Max_Pieces__c</fullName>
    <formula>Pricing_Data__r.Max_Pieces__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Pieces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>