force-app/main/default/objects/SKU_Price__c/fields/Min_Pieces__c.field-meta.xml
<CustomField>
    <fullName>Min_Pieces__c</fullName>
    <formula>Pricing_Data__r.Min_Pieces__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min Pieces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>