force-app/main/default/objects/SKU_Price__c/fields/Pricing_Data__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Data__c</fullName>
    <label>Pricing Data</label>
    <referenceTo>Pricing_Data__c</referenceTo>
    <relationshipLabel>SKU Prices</relationshipLabel>
    <relationshipName>SKU_Prices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>