force-app/main/default/objects/SKU_Price__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pricing_Data__c</columns>
    <columns>Product__c</columns>
    <columns>Min_Pieces__c</columns>
    <columns>Max_Pieces__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>